; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ext4/extr_move_extent.c_copy_extent_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ext4/extr_move_extent.c_copy_extent_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext4_extent = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ext4_extent*, %struct.ext4_extent*)* @copy_extent_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy_extent_status(%struct.ext4_extent* %0, %struct.ext4_extent* %1) #0 {
  %3 = alloca %struct.ext4_extent*, align 8
  %4 = alloca %struct.ext4_extent*, align 8
  store %struct.ext4_extent* %0, %struct.ext4_extent** %3, align 8
  store %struct.ext4_extent* %1, %struct.ext4_extent** %4, align 8
  %5 = load %struct.ext4_extent*, %struct.ext4_extent** %3, align 8
  %6 = call i64 @ext4_ext_is_uninitialized(%struct.ext4_extent* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load %struct.ext4_extent*, %struct.ext4_extent** %4, align 8
  %10 = call i32 @ext4_ext_mark_uninitialized(%struct.ext4_extent* %9)
  br label %17

11:                                               ; preds = %2
  %12 = load %struct.ext4_extent*, %struct.ext4_extent** %4, align 8
  %13 = call i32 @ext4_ext_get_actual_len(%struct.ext4_extent* %12)
  %14 = call i32 @cpu_to_le16(i32 %13)
  %15 = load %struct.ext4_extent*, %struct.ext4_extent** %4, align 8
  %16 = getelementptr inbounds %struct.ext4_extent, %struct.ext4_extent* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  br label %17

17:                                               ; preds = %11, %8
  ret void
}

declare dso_local i64 @ext4_ext_is_uninitialized(%struct.ext4_extent*) #1

declare dso_local i32 @ext4_ext_mark_uninitialized(%struct.ext4_extent*) #1

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @ext4_ext_get_actual_len(%struct.ext4_extent*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
